@@ -1,11 +1,14 @@
 package com.insidemovie.backend.api.movie.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.insidemovie.backend.api.movie.dto.MovieDetailResDto;
 import com.insidemovie.backend.api.movie.dto.boxoffice.BoxOfficeListDTO;
 import com.insidemovie.backend.api.movie.dto.boxoffice.BoxOfficeRequestDTO;
 import com.insidemovie.backend.api.movie.dto.boxoffice.DailyBoxOfficeResponseDTO;
 import com.insidemovie.backend.api.movie.dto.boxoffice.WeeklyBoxOfficeResponseDTO;
+import com.insidemovie.backend.api.movie.dto.tmdb.SearchMovieResponseDTO;
 import com.insidemovie.backend.api.movie.entity.Movie;
 import com.insidemovie.backend.api.movie.entity.boxoffice.DailyBoxOfficeEntity;
 import com.insidemovie.backend.api.movie.entity.boxoffice.WeeklyBoxOfficeEntity;
@@ -19,18 +22,14 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.WeekFields;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
@@ -43,6 +42,7 @@ public class BoxOfficeService {
     @Value("${kobis.api.key}")
     private String kobisApiKey;
 
+    private final ObjectMapper objectMapper;
     private final MovieService movieService;
     private final DailyBoxOfficeRepository dailyRepo;
     private final WeeklyBoxOfficeRepository weeklyRepo;
@@ -60,92 +60,50 @@ public class BoxOfficeService {
     // 일간 박스오피스 조회 및 저장
     @Transactional
     public void fetchAndStoreDailyBoxOffice(BoxOfficeRequestDTO req) {
-        // 어제 날짜 계산
         LocalDate date = LocalDate.now().minusDays(1);
-        log.info("[Service] DailyBoxOffice for yesterday {} (targetDt={})", date, date.format(FMT));
+        log.info("[Service] WILL UPSERT daily date = {}", date);
+        int limit = req.getItemPerPage();
 
-        // 최신(어제) 데이터 API 호출
-        List<DailyBoxOfficeEntity> fetched = fetchDailyFromApi(date, req.getItemPerPage());
+        log.info("[Daily] Fetch & Upsert for date={} (limit={})", date, limit);
 
-        // 업서트 루프
-        for (DailyBoxOfficeEntity e : fetched) {
-            // targetDate + movieCd 로 기존 데이터 조회
-            Optional<DailyBoxOfficeEntity> opt = dailyRepo
-                .findByTargetDateAndMovieCd(date, e.getMovieCd());
+        List<DailyBoxOfficeEntity> fetched = fetchDailyFromApi(date, limit);
 
-            DailyBoxOfficeEntity toSave;
-            if (opt.isPresent()) {
-                toSave = opt.get();
-                toSave.updateFrom(e);
-            } else {
-                toSave = e;
+        for (DailyBoxOfficeEntity incoming : fetched) {
+            // (movieCd, targetDate) 로 기존 검색
+            DailyBoxOfficeEntity entity = dailyRepo
+                    .findByTargetDateAndMovieCd(date, incoming.getMovieCd())
+                    .map(existing -> { existing.updateFrom(incoming); return existing; })
+                    .orElse(incoming); // 새 엔티티
+
+            // TMDB 연동 (없을 때만 저장)
+            movieService.searchMovieByTitleAndYear(
+                    entity.getMovieName(),
+                    parseYearSafe(entity.getOpenDate())
+            ).ifPresent(dto -> {
+                // Movie 없으면 저장
+                movieRepo.findByTmdbMovieId(dto.getId())
+                        .or(() -> {
+                            movieService.fetchAndSaveMovieById(dto.getId());
+                            return movieRepo.findByTmdbMovieId(dto.getId());
+                        })
+                        .ifPresent(entity::setMovie);
+            });
+
+            dailyRepo.save(entity);
+        }
+
+        log.info("[Daily] Upsert completed (count={}) for {}", fetched.size(), date);
+    }
+
+    private int parseYearSafe(String openDate) {
+        try {
+            if (openDate == null || openDate.isBlank()) {
+                return LocalDate.now().getYear();
             }
-
-            // TMDB 연동: 영화 제목+개봉연도로 TMDB ID 조회/저장
-            movieService.searchMovieByTitleAndYear(
-                toSave.getMovieName(),
-                LocalDate.parse(toSave.getOpenDate(), ISO_FMT).getYear()
-                )
-                .ifPresent(dto -> {
-                    Optional<Movie> existingMovie = movieRepo.findByTmdbMovieId(dto.getId());
-                    if (existingMovie.isEmpty()) {
-                        // DB에 없을 때만 TMDB API 호출 + 저장
-                        movieService.fetchAndSaveMovieById(dto.getId());
-                    }
-                    log.info("[연동완료] {} ({}) → TMDB ID={}",
-                        toSave.getMovieName(), toSave.getMovieCd(), dto.getId());
-                });
-
-            // 저장
-            dailyRepo.save(toSave);
+            return LocalDate.parse(openDate, ISO_FMT).getYear();
+        } catch (Exception e) {
+            return LocalDate.now().getYear();
         }
-
-        // 기존 데이터 삭제
-        dailyRepo.deleteByTargetDate(date);
-
-        // 변경된 호출
-        List<DailyBoxOfficeEntity> entities = fetchDailyFromApi(date, req.getItemPerPage());
-
-        // 저장·DTO 변환·예외 처리
-        dailyRepo.saveAll(entities);
-
-        entities.forEach(e -> {
-            movieService.searchMovieByTitleAndYear(
-                    e.getMovieName(),
-                    LocalDate.parse(e.getOpenDate(), ISO_FMT).getYear()
-                )
-                .ifPresent(dto -> {
-                    // TMDB 상세정보 먼저 저장
-                    movieService.fetchAndSaveMovieById(dto.getId());
-
-                    // 저장된 Movie 엔티티 조회
-                    Movie movie = movieRepo.findByTmdbMovieId(dto.getId())
-                        .orElseThrow(() -> new IllegalStateException(
-                            "Movie not found for TMDB ID=" + dto.getId()));
-
-                    // DailyBoxOfficeEntity 와 연관 설정
-                    e.setMovie(movie);
-
-                    log.info("[연동완료] {} ({}) → TMDB ID={}",
-                        e.getMovieName(), e.getMovieCd(), dto.getId());
-                });
-        });
-
-        List<DailyBoxOfficeResponseDTO> items = entities.stream()
-            .map(DailyBoxOfficeResponseDTO::fromEntity)
-            .collect(Collectors.toList());
-
-        if (items.isEmpty()) {
-            throw new BaseException(
-                ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getHttpStatus(),
-                ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getMessage()
-            );
-        }
-
-        BoxOfficeListDTO.<DailyBoxOfficeResponseDTO>builder()
-                .boxofficeType("일별")
-                .items(items)
-                .build();
     }
 
     // 외부 API 호출하여 일간 엔티티 목록 생성
@@ -294,26 +252,47 @@ public class BoxOfficeService {
      */
     @Transactional
     public BoxOfficeListDTO<DailyBoxOfficeResponseDTO> getSavedDailyBoxOffice(String targetDt, int itemPerPage) {
-        LocalDate date = LocalDate.parse(targetDt, FMT);
-        Pageable pageable = PageRequest.of(0, itemPerPage, Sort.by("movieRank"));
-        Page<DailyBoxOfficeEntity> page = dailyRepo.findByTargetDate(date, pageable);
 
-        List<DailyBoxOfficeResponseDTO> items = page.stream()
-            .map(DailyBoxOfficeResponseDTO::fromEntity)
-            .collect(Collectors.toList());
+        LocalDate requestDate = (targetDt == null || targetDt.isBlank())
+                ? LocalDate.now().minusDays(1)
+                : LocalDate.parse(targetDt, FMT);
 
-        if (items.isEmpty()) {
+        String resolvedTargetDt = requestDate.format(FMT);
+
+        // 1) 요청 날짜로 시도
+        List<DailyBoxOfficeEntity> rows = dailyRepo.findAllSortedByTargetDate(requestDate);
+
+        // 2) fallback: 없으면 최신
+        if (rows.isEmpty()) {
+            List<DailyBoxOfficeEntity> latestRows = dailyRepo.findLatestSorted();
+            if (!latestRows.isEmpty()) {
+                LocalDate latestDate = latestRows.get(0).getTargetDate();
+                if (!latestDate.equals(requestDate)) {
+                    log.warn("[Daily][Fallback] 요청일 {} 데이터 없음 → 최신 {} 로 대체",
+                            requestDate, latestDate);
+                    rows = latestRows;
+                    resolvedTargetDt = latestDate.format(FMT);
+                }
+            }
+        }
+
+        if (rows.isEmpty()) {
             throw new BaseException(
-                ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getHttpStatus(),
-                ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getMessage()
+                    ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getHttpStatus(),
+                    ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getMessage()
             );
         }
 
+        List<DailyBoxOfficeResponseDTO> items = rows.stream()
+                .limit(itemPerPage)
+                .map(DailyBoxOfficeResponseDTO::fromEntity)
+                .toList();
+
         return BoxOfficeListDTO.<DailyBoxOfficeResponseDTO>builder()
-            .boxofficeType("일별")
-            .targetDt(targetDt)
-            .items(items)
-            .build();
+                .boxofficeType("일별")
+                .targetDt(resolvedTargetDt)
+                .items(items)
+                .build();
     }
 
     /**
@@ -321,83 +300,134 @@ public class BoxOfficeService {
      */
     @Transactional
     public BoxOfficeListDTO<WeeklyBoxOfficeResponseDTO> getSavedWeeklyBoxOffice(
-            String targetDt, String weekGb, int itemPerPage
-    ) {
-        // 파라미터가 없으면 가장 최근 저장된 yearWeekTime 조회
+            String targetDt, String weekGb, int itemPerPage) {
+
         String yearWeek = Optional.ofNullable(targetDt)
-            .filter(dt -> !dt.isBlank())
-            .map(dt -> {
-                LocalDate date = LocalDate.parse(dt, FMT);
-                WeekFields wf = WeekFields.ISO;
-                int week = date.get(wf.weekOfWeekBasedYear());
-                int year = date.get(wf.weekBasedYear());
-                return String.format("%04dIW%02d", year, week);
-            })
-            .orElseGet(() ->
-                weeklyRepo.findFirstByOrderByYearWeekTimeDesc()
-                          .map(WeeklyBoxOfficeEntity::getYearWeekTime)
-                          .orElseThrow(() ->
-                              new BaseException(
-                                  ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
-                                  "저장된 박스오피스 데이터가 없습니다."
-                              ))
-            );
+                .filter(s -> !s.isBlank())
+                .map(dt -> {
+                    LocalDate d = LocalDate.parse(dt, FMT);
+                    WeekFields wf = WeekFields.ISO;
+                    int w = d.get(wf.weekOfWeekBasedYear());
+                    int y = d.get(wf.weekBasedYear());
+                    return String.format("%04dIW%02d", y, w);
+                })
+                .orElse(null);
 
-        // 페이징 조회
-        Pageable pageReq = PageRequest.of(0, itemPerPage, Sort.by("movieRank"));
-        Page<WeeklyBoxOfficeEntity> page = weeklyRepo.findByYearWeekTime(yearWeek, pageReq);
+        List<WeeklyBoxOfficeEntity> rows =
+                (yearWeek != null) ? weeklyRepo.findAllSortedByYearWeek(yearWeek) : List.of();
 
-        List<WeeklyBoxOfficeResponseDTO> items = page.stream()
-            .map(WeeklyBoxOfficeResponseDTO::fromEntity)
-            .collect(Collectors.toList());
-
-        if (items.isEmpty()) {
-            throw new BaseException(
-                ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
-                ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getMessage()
-            );
+        if (rows.isEmpty()) {
+            rows = weeklyRepo.findLatestSorted();
+            if (rows.isEmpty()) {
+                throw new BaseException(
+                        ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
+                        ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getMessage()
+                );
+            }
+            yearWeek = rows.get(0).getYearWeekTime();
+            log.warn("[Weekly][Fallback] 요청된 targetDt 데이터 없음 → 최신 yearWeek={} 사용", yearWeek);
         }
 
+        List<WeeklyBoxOfficeResponseDTO> items = rows.stream()
+                .limit(itemPerPage)
+                .map(WeeklyBoxOfficeResponseDTO::fromEntity)
+                .toList();
+
         return BoxOfficeListDTO.<WeeklyBoxOfficeResponseDTO>builder()
-            .boxofficeType("주간")
-            .targetDt(yearWeek)
-            .items(items)
-            .build();
+                .boxofficeType("주간")
+                .targetDt(yearWeek)
+                .items(items)
+                .build();
     }
+
 
      /**
      * 저장된 일간 박스오피스 영화의 MovieDetailResDto 리스트 반환
      */
     @Transactional
-    public MovieDetailResDto getDailyMovieDetailByMovieId(Long movieId, String targetDt) {
-        // 1) movieId → Movie 엔티티 조회
-        Movie movie = movieRepo.findById(movieId)
-            .orElseThrow(() -> new BaseException(
-                ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
-                String.format("영화를 찾을 수 없습니다. movieId=%d", movieId)
-            ));
+    public MovieDetailResDto getDailyMovieDetailByMovieId(Long movieId) {
 
-        // 2) Movie 에서 tmdbId 확보
+        // 1) Movie 1차 조회 (있으면 바로 사용)
+        Movie movie = movieRepo.findById(movieId).orElse(null);
+
+        if (movie == null) {
+            // 로컬 Movie 없음 → 어떤 영화인지 알아내야 함.
+            // Daily 박스오피스 테이블에서 movieId 와 연결된 row 가 있을 수도, 없을 수도 있음.
+            List<DailyBoxOfficeEntity> latestDaily = dailyRepo.findLatestSorted();
+
+            // movieId 로 직접 DailyBoxOfficeEntity 의 Movie FK 매칭 (존재할 때)
+            DailyBoxOfficeEntity matchedByMovieEntity = latestDaily.stream()
+                    .filter(d -> d.getMovie() != null && d.getMovie().getId().equals(movieId))
+                    .findFirst()
+                    .orElse(null);
+
+            String titleForSearch;
+            Integer yearForSearch;
+
+            if (matchedByMovieEntity != null) {
+                titleForSearch = matchedByMovieEntity.getMovieName();
+                yearForSearch = extractYearSafe(matchedByMovieEntity.getOpenDate()); // "yyyy-MM-dd" or "yyyyMMdd"
+            } else {
+                throw new BaseException(
+                        ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
+                        "영화가 로컬에 없고 박스오피스에서도 역추적할 수 없습니다. movieId=" + movieId
+                );
+            }
+
+            log.info("[DailyDetail][AutoFetch] local Movie 없음. 제목='{}', year={}", titleForSearch, yearForSearch);
+
+            // TMDB 검색
+            movieService.searchMovieByTitleAndYear(titleForSearch, yearForSearch)
+                    .ifPresentOrElse(found -> {
+                                // 상세 저장 (actors/감독 등 포함)
+                                movieService.fetchAndSaveMovieById(found.getId());
+                            },
+                            () -> {
+                                throw new BaseException(
+                                        ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
+                                        "TMDB 검색 실패: title=" + titleForSearch + ", year=" + yearForSearch
+                                );
+                            });
+
+            // 다시 로컬에서 재조회 (방금 TMDB 저장)
+            movie = movieRepo.findByTmdbMovieId(
+                            movieService.searchMovieByTitleAndYear(titleForSearch, yearForSearch)
+                                    .map(SearchMovieResponseDTO::getId)
+                                    .orElse(null)
+                    ).orElseThrow(() -> new BaseException(
+                            ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
+                            "TMDB 저장 후 Movie 재조회 실패"
+                    ));
+        }
+
+        // TMDB ID 확인 (신규 저장이라면 반드시 존재)
         Long tmdbId = movie.getTmdbMovieId();
         if (tmdbId == null) {
             throw new BaseException(
-                ErrorStatus.NOT_FOUND_DAILY_MOIVE.getHttpStatus(),
-                "해당 영화에 연동된 TMDB ID가 없습니다."
+                    ErrorStatus.NOT_FOUND_DAILY_MOIVE.getHttpStatus(),
+                    "해당 영화에 TMDB ID가 없습니다. movieId=" + movieId
             );
         }
 
-        // 3) targetDt → LocalDate 변환
-        LocalDate date = LocalDate.parse(targetDt, FMT);
+        // 기준 날짜 = 어제
+        LocalDate baseDate = LocalDate.now().minusDays(1);
 
-        // 4) 일간 박스오피스 레코드 조회
-        DailyBoxOfficeEntity box = dailyRepo
-            .findByMovie_TmdbMovieIdAndTargetDate(tmdbId, date)
-            .orElseThrow(() -> new BaseException(
-                ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getHttpStatus(),
-                String.format("해당 날짜(%s)의 일간 박스오피스 정보를 찾을 수 없습니다.", targetDt)
-            ));
+        // 어제 날짜의 박스오피스 레코드 조회
+        Optional<DailyBoxOfficeEntity> yesterdayOpt =
+                dailyRepo.findByMovie_TmdbMovieIdAndTargetDate(tmdbId, baseDate);
 
-        // 5) MovieDetailResDto 변환
+        // 없으면 최신 fallback 에서 동일 영화
+        DailyBoxOfficeEntity daily = yesterdayOpt.orElseGet(() -> {
+            List<DailyBoxOfficeEntity> latestRows = dailyRepo.findLatestSorted();
+            return latestRows.stream()
+                    .filter(e -> e.getMovie() != null &&
+                            tmdbId.equals(e.getMovie().getTmdbMovieId()))
+                    .findFirst()
+                    .orElseThrow(() -> new BaseException(
+                            ErrorStatus.NOT_FOUND_DAILY_BOXOFFICE.getHttpStatus(),
+                            "해당 영화의 일간 박스오피스 데이터가 없습니다."
+                    ));
+        });
         return toMovieDetailResDto(movie);
     }
 
@@ -405,55 +435,86 @@ public class BoxOfficeService {
      * 저장된 주간 박스오피스 영화의 MovieDetailResDto 리스트 반환
      */
     @Transactional
-    public MovieDetailResDto getWeeklyMovieDetailByMovieId(
-            Long movieId, String targetDt, String weekGb
-    ) {
-        // movieId → Movie 엔티티 조회
-        Movie movie = movieRepo.findById(movieId)
-            .orElseThrow(() -> new BaseException(
-                ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
-                String.format("영화를 찾을 수 없습니다. movieId=%d", movieId)
-            ));
+    public MovieDetailResDto getWeeklyMovieDetailByMovieId(Long movieId, String weekGb) {
 
-        // Movie 에서 tmdbId 확보
+        // Movie 1차 조회 (없으면 나중에 박스오피스 기반 TMDB 검색 시도)
+        Movie movie = movieRepo.findById(movieId).orElse(null);
+
+        // 최신 yearWeek 결정 (weeklyRepo.findLatestSorted() 가 최신순 정렬이라고 가정)
+        List<WeeklyBoxOfficeEntity> latestList = weeklyRepo.findLatestSorted();
+        if (latestList.isEmpty()) {
+            throw new BaseException(
+                    ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
+                    "저장된 주간 박스오피스 데이터가 없습니다."
+            );
+        }
+        String latestYearWeek = latestList.get(0).getYearWeekTime();
+
+        // 최신 week의 동일 영화 레코드를 확보 (Movie 없을 때 제목/연도용)
+        WeeklyBoxOfficeEntity matchedWeekly = latestList.stream()
+                .filter(w -> w.getMovie() != null && w.getMovie().getId().equals(movieId))
+                .findFirst()
+                .orElse(null);
+
+        // 로컬 Movie 없으면 → weekly 데이터로 제목/개봉연 찾아 TMDB 검색 & 저장
+        if (movie == null) {
+            if (matchedWeekly == null) {
+                // Movie 자체가 없고, latest weekly 데이터에서도 연결 불가 → 더 이상 단서 없음
+                throw new BaseException(
+                        ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
+                        "Movie가 로컬에 없고 주간 박스오피스에서도 역추적 불가. movieId=" + movieId
+                );
+            }
+
+            String titleForSearch = matchedWeekly.getMovieNm();
+            int yearForSearch = extractYearSafe(matchedWeekly.getOpenDt()); // "yyyy-MM-dd" or "yyyyMMdd"
+            log.info("[WeeklyDetail][AutoFetch] local Movie 없음. title='{}', year={}", titleForSearch, yearForSearch);
+
+            // TMDB 검색
+            Long fetchedTmdbId = movieService.searchMovieByTitleAndYear(titleForSearch, yearForSearch)
+                    .map(SearchMovieResponseDTO::getId)
+                    .orElseThrow(() -> new BaseException(
+                            ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
+                            "TMDB 검색 실패: title=" + titleForSearch + ", year=" + yearForSearch
+                    ));
+
+            // 상세 저장
+            movieService.fetchAndSaveMovieById(fetchedTmdbId);
+
+            // 재조회 (tmdbMovieId 로)
+            movie = movieRepo.findByTmdbMovieId(fetchedTmdbId)
+                    .orElseThrow(() -> new BaseException(
+                            ErrorStatus.NOT_FOUND_MOVIE_EXCEPTION.getHttpStatus(),
+                            "TMDB 저장 후 Movie 재조회 실패 tmdbId=" + fetchedTmdbId
+                    ));
+        }
+
+        // TMDB ID 필수 검증
         Long tmdbId = movie.getTmdbMovieId();
         if (tmdbId == null) {
             throw new BaseException(
-                ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
-                "해당 영화에 연동된 TMDB ID가 없습니다."
+                    ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
+                    "해당 영화에 TMDB ID가 없습니다. movieId=" + movieId
             );
         }
 
-        // targetDt → yearWeek 계산 (없으면 최신)
-        String yearWeek = Optional.ofNullable(targetDt)
-            .filter(dt -> !dt.isBlank())
-            .map(dt -> {
-                LocalDate d = LocalDate.parse(dt, FMT);
-                WeekFields wf = WeekFields.ISO;
-                int w = d.get(wf.weekOfWeekBasedYear());
-                int y = d.get(wf.weekBasedYear());
-                return String.format("%04dIW%02d", y, w);
-            })
-            .orElseGet(() ->
-                weeklyRepo.findFirstByOrderByYearWeekTimeDesc()
-                          .map(WeeklyBoxOfficeEntity::getYearWeekTime)
-                          .orElseThrow(() -> new BaseException(
-                              ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
-                              "저장된 주간 박스오피스 데이터가 없습니다."
-                          ))
-            );
-
-        // 주간 박스오피스 레코드 조회
-        WeeklyBoxOfficeEntity box = weeklyRepo
-            .findByMovie_TmdbMovieIdAndYearWeekTime(tmdbId, yearWeek)
-            .orElseThrow(() -> new BaseException(
-                ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
-                String.format("연주차(%s)의 주간 박스오피스 정보를 찾을 수 없습니다.", yearWeek)
-            ));
-
-        // 5) MovieDetailResDto 변환
+        // 최신 yearWeek 에서 주간 박스오피스 레코드 조회 (없으면 fallback: 이미 latestList 에 같은 week 다 있음)
+        WeeklyBoxOfficeEntity weeklyRecord = weeklyRepo
+                .findByMovie_TmdbMovieIdAndYearWeekTime(tmdbId, latestYearWeek)
+                .orElseGet(() ->
+                        // 혹시 findBy... 가 null 이면 latestList 에서 직접 검색
+                        latestList.stream()
+                                .filter(w -> w.getMovie() != null &&
+                                        tmdbId.equals(w.getMovie().getTmdbMovieId()))
+                                .findFirst()
+                                .orElseThrow(() -> new BaseException(
+                                        ErrorStatus.NOT_FOUND_WEEKLY_BOXOFFICE.getHttpStatus(),
+                                        "최신 주간 데이터에서 해당 영화 레코드를 찾을 수 없습니다."
+                                ))
+                );
         return toMovieDetailResDto(movie);
     }
+
 
     /**
      * Movie 엔티티 → MovieDetailResDto 매핑 헬퍼
@@ -462,20 +523,86 @@ public class BoxOfficeService {
         MovieDetailResDto dto = new MovieDetailResDto();
         dto.setId(movie.getId());
         dto.setTitle(movie.getTitle());
+        dto.setTitleEn(movie.getTitleEn());
         dto.setOverview(movie.getOverview());
         dto.setPosterPath(movie.getPosterPath());
         dto.setBackdropPath(movie.getBackdropPath());
         dto.setVoteAverage(movie.getVoteAverage());
         dto.setOriginalLanguage(movie.getOriginalLanguage());
-        dto.setIsLike(false);  // 좋아요 기능 연동 시 변경
+        dto.setIsLike(false); // TODO: 좋아요 연동
 
-        List<String> genres = movieGenreRepository
-            .findByMovie(movie)
-            .stream()
-            .map(mg -> mg.getGenreType().name())
-            .collect(Collectors.toList());
+        // 장르
+        List<String> genres = movieGenreRepository.findByMovie(movie)
+                .stream()
+                .map(mg -> mg.getGenreType().name())
+                .toList();
         dto.setGenre(genres);
 
+        // 배우 / 감독 / OTT : JSON 배열 파싱
+        dto.setActors(readJsonArray(movie.getActors()));          // ["배우1","배우2",...]
+        dto.setDirector(readJsonArray(movie.getDirectors()));     // ["감독1","감독2"...]
+        dto.setOttProviders(readJsonArray(movie.getOttProviders())); // []
+
+        dto.setRating(movie.getRating());
+
+        // releaseDate (LocalDate → String "yyyy-MM-dd" 혹은 null)
+        if (movie.getReleaseDate() != null) {
+            dto.setReleaseDate(movie.getReleaseDate().toString());  // DTO 타입에 맞게
+        } else {
+            dto.setReleaseDate(null);
+        }
+
+        dto.setRuntime(movie.getRuntime());
+        dto.setStatus(movie.getStatus());
         return dto;
     }
+
+
+    private List<String> parseList(String raw) {
+        if (raw == null || raw.isBlank()) return List.of();
+        return Arrays.stream(raw.replaceAll("^\\[|]$", "").split(","))
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .toList();
+    }
+
+    private String parseSingle(String raw) {
+        if (raw == null || raw.isBlank()) return null;
+        String cleaned = raw.replaceAll("^\\[|]$", "").trim();
+        return cleaned.isEmpty() ? null : cleaned;
+    }
+
+    private List<String> readJsonArray(String raw) {
+        if (raw == null || raw.isBlank()) return List.of();
+        try {
+            return objectMapper.readValue(raw, new TypeReference<List<String>>() {
+            });
+        } catch (Exception e) {
+            // 과거 toString() 포맷 호환 (fallback)
+            if (raw.startsWith("[") && raw.endsWith("]")) {
+                return Arrays.stream(raw.substring(1, raw.length() - 1).split(","))
+                        .map(String::trim)
+                        .filter(s -> !s.isEmpty())
+                        .toList();
+            }
+            return List.of();
+        }
+    }
+
+    private int extractYearSafe(String openDate) {
+        if (openDate == null || openDate.isBlank()) {
+            return LocalDate.now().getYear();
+        }
+        // 가능한 포맷 2가지 시도
+        String trimmed = openDate.trim();
+        try {
+            if (trimmed.length() == 10) { // yyyy-MM-dd
+                return LocalDate.parse(trimmed, DateTimeFormatter.ISO_DATE).getYear();
+            } else if (trimmed.length() == 8) { // yyyyMMdd
+                return LocalDate.parse(trimmed, DateTimeFormatter.ofPattern("yyyyMMdd")).getYear();
+            }
+        } catch (Exception ignored) { }
+        return LocalDate.now().getYear();
+    }
+
 }
